--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -46,6 +46,32 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Verify new shoulder icons
+        - Add special message with all controls on it.
+            - Add to context menu
+
+    - Remap keyboard controls.
+        WASD main movement
+        SPACE to interact
+        SHIFT+E to edit
+        H attack, J roll, K spirit sight
+        Y left tool, U right tool, I/O next/prev elemnet
+
+    Editor Improvements
+        - New objects should be selected on creation.
+        - pressing Escape should unselect the selected object.
+        - rename delete tool to: Delete Tile
+        - fix import so that it imports to the corresponding zone instead of always overriding the current zone.
+
+
+    - Spirit World Improvements
+        - Sky is covered in cracked crystal ground that require cloud boots to walk on
+            - Sky also drains spirit energy + cloud boots should require spirit energy to float
+        - Need to figure out path to the sky mountains in spirit world that doesn't require completing waterfall tower.
+            - Maybe the forge has an entrance in the main spirit world and an entrance in the mountains, similar to waterfall tower
+            - Could have a gate from the spirit world sky mountains to the material world mountains for easier access to the forge. (Although mitts also give you easy access)
+            - Probably simplest to just use the same connector cave from the material world, but it is easier to pass in the spirit world
+
     - Improvements
         - Test using PASSIVE_TOOL button as a run button that consumes spirit energy, possibly makes you slip a bit.
 
