Render hitboxes of all objects in editing mode so they can always be seen.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -46,6 +46,8 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Add button to link door target back to current target.
+        - Make sure this marks that zone as dirty.
     - Spirit World Improvements
         - Sky is covered in cracked crystal ground that require cloud boots to walk on
             - Sky also drains spirit energy + cloud boots should require spirit energy to float
