--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -46,13 +46,14 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    Bug Fix:
+        - Golems hands aren't set to left/right while reviving.
+
     Editor Improvements
-        - Split Panels up + add tabs
-            Zone top left
-            Progress/Inventory bottom left
-            Tool Palette top right (tiles, objects, enemies, bosses)
-                - Add graphical palette for objects/enemies/bosses
-            Context Properties bottom right (changes depending on editing state)
+        - Add graphical palettes
+            - Objects
+            - Enemies
+            - Bosses
         - Track which zones have been changed but not exported.
         - Support undo/redo actions
             - Include in context menu when editor is active
