--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -167,8 +167,6 @@ Current tasks:
     Make mutation transition use the same area instance so contents don't reset
         - Will need to add special handling to remove extra ice tiles from frost beast+heat sink battles.
 
-    - Probably should move hero back to safe location on reviving.
-
     - Randomizer improvements
         - Add configurable goal
         - Fix can get permanently stuck in areas:
@@ -182,7 +180,8 @@ Current tasks:
     - Add new hold+walk chakram animations
         - play last 2 frames of attack animation on release.
 
-    - Add new waterfall graphics
+    - Work on new waterfall graphics
+        - Email Jon about waterfall graphic updates.
 
 Staff Improvements:
     - Charging staff 2 should show a preview of where it will hit and get wider in addition to longer
@@ -326,6 +325,7 @@ Spirit Store(s)
         5 -> Quick Charge (40% reduction in time to charge)
 
 Spirit Cloak Improvements
+    - Barrier burst should consume 10 spirit
     - Enemies should not be able to target you while invisible.
     - Make invisibility ignore certain ground effects+hazards: spikes, ice floor, fire barriers, escalators, lightning barriers, and some obstacles
 
